test/compile-fail/resolution/pub/in-non-ancestral-crate/expected.txt
error[E0742]: `c` is not an ancestor of `crate`
  ┌─ ./test/compile-fail/resolution/pub/in-non-ancestral-crate/top.rhdl:2:19
  │
2 │     pub(in crate::c) struct b {}
  │                   ^
  │
  = visibility can only be restricted to an ancestral path

